--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@vitejs/plugin-react": "^5.1.0",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
-        "react-router-dom": "^7.9.5"
+        "react-router-dom": "^7.9.6",
+        "recharts": "^3.4.1"
     }
 }
