--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@babel/preset-react": "^7.28.5",
         "@tailwindcss/vite": "^4.0.0",
         "axios": "^1.13.2",
         "concurrently": "^9.0.1",
